[package]
name = "pylon-cli"
version = "0.1.0"
authors = ["Alex P. <alexeek@protonmail.com>"]
repository = "https://github.com/fjah/pylon-cli"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
structopt = "0.3.15"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
indicatif = "0.15.0"
console = "0.11.3"
tokio-tungstenite = "0.10.1"
futures-util = "0.3.5"
